--- a/angular.html
+++ b/angular.html
@@ -46,7 +46,7 @@
 
   <div class="portfolio-item-individual">
     <p>This project is an Angular application that allows users to get information about movies, genres, and directors.
-      Users can also save movies in their list of favorites and edit details of their profile. This application uses an
+      Users can also save movies in their list of favourites and edit details of their profile. This application uses an
       existing server-side REST API and MongoDB database.</p>
     <img src="img/angular.gif" alt="">
     <p>
