--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
     </div>
   </section>
 
+  <section class="resume" id="resume">
+    <h3 class="section__title section__title--resume">Resume</h3>
+    <a href="CV.pdf" download="Resume" class="btn">Resume Download</a>
+  </section>
+
   <!-- Footer -->
   <footer class="footer">
     <!-- replace with your own email address -->
