Edited About section and added email button

--- a/angular.html
+++ b/angular.html
@@ -49,18 +49,18 @@
       Users can also save movies in their list of favourites and edit details of their profile. This application uses an
       existing server-side REST API and MongoDB database.</p>
     <img src="img/angular.gif" alt="">
-    <p>
-      <strong>Tech Specs: Angular, Node, Mongoose, Express</strong>
-    </p>
-    <a href="https://github.com/carts123/myFlix-client-Angular" class="btn">Git repo</a>
-    <a href="https://carts123.github.io/myFlix-client-Angular/" class="btn">Live site</a>
+    <div class="section__title--apps">
+      <p>
+        <strong>Tech Specs: Angular, Node, Mongoose, Express</strong>
+      </p>
+      <a href="https://github.com/carts123/myFlix-client-Angular" class="btn">Git repo</a>
+      <a href="https://carts123.github.io/myFlix-client-Angular/" class="btn">Live site</a>
+    </div>
   </div>
 
 
   <!-- Footer -->
   <footer class="footer">
-    <!-- replace with your own email address -->
-    <a href="mailto:jonnycarter8313@gmail.com" class="footer__link">jonnycarter8313@gmail.com</a>
     <ul class="social-list">
       <li class="social-list__item">
         <a class="social-list__link" href="https://www.linkedin.com/in/jonathan-graham-carter/">
@@ -75,6 +75,11 @@
       <li class="social-list__item">
         <a class="social-list__link" href="https://github.com/carts123">
           <i class="fab fa-github"></i>
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link" href="mailto:jonnycarterdev@gmail.com">
+          <i class="fas fa-envelope-square"></i>
         </a>
       </li>
     </ul>
