--- a/index.html
+++ b/index.html
@@ -50,18 +50,21 @@
     <h2 class="section__title section__title--services">Skills</h2>
     <div class="services">
       <div class="service">
-        <h3>Javascript</h3>
-        <p>My favourite and most used language. </p>
+        <h3>Problem Solver</h3>
+        <p>Clarity is my passion, ambiguity is my comfort zone. I anticipate problems before issues arise by formulating
+          solutions to streamline the development process. </p>
       </div> <!-- / service -->
 
       <div class="service">
-        <h3>React</h3>
-        <p>My favourite library.</p>
+        <h3>Self-starter</h3>
+        <p>Completing the CareerFoundry Full-stack Developer course alongside working self-employed, I have consistently
+          demonstrated a self-starter mindset and passion to improve myself.</p>
       </div> <!-- / service -->
 
       <div class="service">
-        <h3>Node.js</h3>
-        <p>Node.js is great and is the best ever woohoo.</p>
+        <h3>Developer Skill Set</h3>
+        <p>Having undertook a variety of portfolio pieces, I possess knowledge of a wide range of languages, frameworks,
+          and general developer technical skills.</p>
       </div> <!-- / service -->
     </div> <!-- / services -->
 
@@ -74,13 +77,21 @@
     <p class="section__subtitle section__subtitle--about"></p>
 
     <div class="about-me__body">
-      <p>I’m a junior Full-Stack Developer with a background in landscape gardening and marketing. After moving down to
-        London in January 2020 in search of an entry-level sales role I found my career search halted by Covid-19. With
-        entry level roles drying up I made the decision in June to move back to my home village and return to a
-        self-employed landscape gardener role, of which I have 5+ years experience. After a month or so of brainstorming
-        career options I landed on the idea of becoming a software developer and thus signed on to the CareerFoundry
-        Full-Stack Developer course. This wasn’t totally out the blue, as I previously created a Wix website for a local
-        store and also a travel photography portfolio for myself. </p>
+      <p>I’m a junior Full-Stack Developer with a background in gardening and marketing. After moving to
+        London in January 2020 in search of an entry-level marketing role I found my career search halted by Covid-19.
+        With entry level roles drying up I made the decision in June to move back to my home village and return to a
+        self-employed gardener role, of which I have 5+ years experience. After a month or so of brainstorming
+        career options I settled on the idea of becoming a software developer and thus signed on to the CareerFoundry
+        Full-Stack Developer course.
+      </p>
+      <p>
+        I am particularly interested in companies who value communication and team work - as well as somewhere I can
+        collaborate
+        and produce work that contributes positively to society.
+      </p>
+      <p>
+        Feel free to check out my portfolio of work below.
+      </p>
     </div>
 
     <img src="img/JonnyC.jpg" alt="Jonny leaning against a wall" class="about-me__img">
@@ -123,17 +134,19 @@
         <img src="img/chat.jpg" alt="" class="portfolio__img">
       </a>
     </div>
-  </section>
 
-  <section class="resume" id="resume">
-    <h3 class="section__title section__title--resume">Resume</h3>
-    <a href="CV.pdf" download="Resume" class="btn">Resume Download</a>
+    <!-- Resume -->
+    <br>
+    <div class="resume" id="resume">
+      <h2 class="section__title section__title--resume">Resume</h2>
+      <br>
+      <a href="img/CV.pdf" target="_blank" class="btn" download>Resume Download</a>
+    </div>
+
   </section>
 
   <!-- Footer -->
   <footer class="footer">
-    <!-- replace with your own email address -->
-    <a href="mailto:jonnycarter8313@gmail.com" class="footer__link">jonnycarter8313@gmail.com</a>
     <ul class="social-list">
       <li class="social-list__item">
         <a class="social-list__link" href="https://www.linkedin.com/in/jonathan-graham-carter/">
@@ -148,6 +161,11 @@
       <li class="social-list__item">
         <a class="social-list__link" href="https://github.com/carts123">
           <i class="fab fa-github"></i>
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link" href="mailto:jonnycarterdev@gmail.com">
+          <i class="fas fa-envelope-square"></i>
         </a>
       </li>
     </ul>
