--- a/pokedex.html
+++ b/pokedex.html
@@ -50,18 +50,18 @@
       view a list of Pokémon and click on a Pokémon's name to
       view a modal with more details.</p>
     <img src="img/pokedex.gif" alt="">
-    <p>
-      <strong>Tech Specs: Javascript, JSON, Bootstrap</strong>
-    </p>
-    <a href="https://github.com/carts123/pokedex-app" class="btn">Git repo</a>
-    <a href="https://carts123.github.io/pokedex-app/" class="btn">Live site</a>
+    <div class="section__title--apps">
+      <p>
+        <strong>Tech Specs: Javascript, JSON, Bootstrap</strong>
+      </p>
+      <a href="https://github.com/carts123/pokedex-app" class="btn">Git repo</a>
+      <a href="https://carts123.github.io/pokedex-app/" class="btn">Live site</a>
+    </div>
   </div>
 
 
   <!-- Footer -->
   <footer class="footer">
-    <!-- replace with your own email address -->
-    <a href="mailto:jonnycarter8313@gmail.com" class="footer__link">jonnycarter8313@gmail.com</a>
     <ul class="social-list">
       <li class="social-list__item">
         <a class="social-list__link" href="https://www.linkedin.com/in/jonathan-graham-carter/">
@@ -76,6 +76,11 @@
       <li class="social-list__item">
         <a class="social-list__link" href="https://github.com/carts123">
           <i class="fab fa-github"></i>
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link" href="mailto:jonnycarterdev@gmail.com">
+          <i class="fas fa-envelope-square"></i>
         </a>
       </li>
     </ul>
