--- a/chatapp.html
+++ b/chatapp.html
@@ -49,17 +49,17 @@
       also select their background color before beginning their chat. The application can be accessed offline and will
       load data from the last online session.</p>
     <img src="img/pokedex.gif" alt="">
-    <p>
-      <strong>Tech Stack: React Native, Expo, Google Firestore Database</strong>
-    </p>
-    <a href="https://github.com/carts123/ChatApp" class="btn">Git repo</a>
+    <div class="section__title--apps">
+      <p>
+        <strong>Tech Stack: React Native, Expo, Google Firestore Database</strong>
+      </p>
+      <a href="https://github.com/carts123/ChatApp" class="btn">Git repo</a>
+    </div>
   </div>
 
 
   <!-- Footer -->
   <footer class="footer">
-    <!-- replace with your own email address -->
-    <a href="mailto:jonnycarter8313@gmail.com" class="footer__link">jonnycarter8313@gmail.com</a>
     <ul class="social-list">
       <li class="social-list__item">
         <a class="social-list__link" href="https://www.linkedin.com/in/jonathan-graham-carter/">
@@ -74,6 +74,11 @@
       <li class="social-list__item">
         <a class="social-list__link" href="https://github.com/carts123">
           <i class="fab fa-github"></i>
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link" href="mailto:jonnycarterdev@gmail.com">
+          <i class="fas fa-envelope-square"></i>
         </a>
       </li>
     </ul>
