--- a/meetapp.html
+++ b/meetapp.html
@@ -44,24 +44,24 @@
     <img src="img/meet.jpg" alt="" class="intro__img">
   </section>
   <div class="portfolio-item-individual">
-    <img src="img/meet.gif" alt="">
     <p>A serverless, progressive web app (PWA) built with React using a test-driven development technique (TDD). The app
       uses the Meetup API to fetch upcoming events for a selected city, and OAuth2 authentication flow. For the
       authorization server it uses AWS Lambda. A service worker
       allows the app to work offline. The recharts library is used to visualize data with a scatter graph and a pie
       chart.</p>
-    <p>
-      <strong>Tech Specs: React, Node, Gherkin, Google Calendar API</strong>
-    </p>
-    <a href="https://github.com/carts123/meet" class="btn">Git repo</a>
-    <a href="https://carts123.github.io/meet/" class="btn">Live site</a>
+    <img src="img/meet.gif" alt="">
+    <div class="section__title--apps">
+      <p>
+        <strong>Tech Specs: React, Node, Gherkin, Google Calendar API</strong>
+      </p>
+      <a href="https://github.com/carts123/meet" class="btn">Git repo</a>
+      <a href="https://carts123.github.io/meet/" class="btn">Live site</a>
+    </div>
   </div>
 
 
   <!-- Footer -->
   <footer class="footer">
-    <!-- replace with your own email address -->
-    <a href="mailto:jonnycarter8313@gmail.com" class="footer__link">jonnycarter8313@gmail.com</a>
     <ul class="social-list">
       <li class="social-list__item">
         <a class="social-list__link" href="https://www.linkedin.com/in/jonathan-graham-carter/">
@@ -76,6 +76,11 @@
       <li class="social-list__item">
         <a class="social-list__link" href="https://github.com/carts123">
           <i class="fab fa-github"></i>
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link" href="mailto:jonnycarterdev@gmail.com">
+          <i class="fas fa-envelope-square"></i>
         </a>
       </li>
     </ul>
