--- a/myflixapi.html
+++ b/myflixapi.html
@@ -48,17 +48,17 @@
     <p>This project is a REST API that interacts with a MongoDB database. It is used in other projects to provide movie
       information and allow users to create accounts and save their favourite movies.</p>
     <img src="img/pokedex.gif" alt="">
-    <p>
-      <strong> Stack: MongoDB, Express, Node.js</strong>
-    </p>
-    <a href="https://github.com/carts123/movie_api" class="btn">Git repo</a>
+    <div class="section__title--apps">
+      <p>
+        <strong> Stack: MongoDB, Express, Node.js</strong>
+      </p>
+      <a href="https://github.com/carts123/movie_api" class="btn">Git repo</a>
+    </div>
   </div>
 
 
   <!-- Footer -->
   <footer class="footer">
-    <!-- replace with your own email address -->
-    <a href="mailto:jonnycarter8313@gmail.com" class="footer__link">jonnycarter8313@gmail.com</a>
     <ul class="social-list">
       <li class="social-list__item">
         <a class="social-list__link" href="https://www.linkedin.com/in/jonathan-graham-carter/">
@@ -73,6 +73,11 @@
       <li class="social-list__item">
         <a class="social-list__link" href="https://github.com/carts123">
           <i class="fab fa-github"></i>
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link" href="mailto:jonnycarterdev@gmail.com">
+          <i class="fas fa-envelope-square"></i>
         </a>
       </li>
     </ul>
