Adding project titles on hover

--- a/index.html
+++ b/index.html
@@ -105,43 +105,74 @@
 
     <div class="portfolio">
       <!-- Portfolio item 01 -->
-      <a href="pokedex.html" class="portfolio__item" title="Pokedex">
+      <div class="portfolio__item">
         <img src="img/pokedex.jpg" alt="" class="portfolio__img">
-      </a>
+        <div class="image__overlay">
+          <a href="pokedex.html" style="text-decoration: none; color: white">
+            <h3 class="image__title">Pokedex App</h3>
+          </a>
+        </div>
+      </div>
 
       <!-- Portfolio item 02 -->
-      <a href="angular.html" class="portfolio__item">
+      <div class="portfolio__item">
         <img src="img/angular.jpg" alt="" class="portfolio__img">
-      </a>
+        <div class="image__overlay">
+          <a href="angular.html" style="text-decoration: none; color: white">
+            <h3 class="image__title">MyFlix Angular</h3>
+          </a>
+        </div>
+      </div>
 
       <!-- Portfolio item 03 -->
-      <a href="myflixreact.html" class="portfolio__item">
+      <div class="portfolio__item">
         <img src="img/reactapp.jpg" alt="" class="portfolio__img">
-      </a>
+        <div class="image__overlay">
+          <a href="myflixreact.html" style="text-decoration: none; color: white">
+            <h3 class="image__title">MyFlix React</h3>
+          </a>
+        </div>
+      </div>
 
       <!-- Portfolio item 04 -->
-      <a href="meetapp.html" class="portfolio__item">
+      <div class="portfolio__item">
         <img src="img/meet.jpg" alt="" class="portfolio__img">
-      </a>
+        <div class="image__overlay">
+          <a href="meetapp.html" style="text-decoration: none; color: white">
+            <h3 class="image__title">Meet App</h3>
+          </a>
+        </div>
+      </div>
 
       <!-- Portfolio item 05 -->
-      <a href="myflixapi.html" class="portfolio__item">
+      <div class="portfolio__item">
         <img src="img/mongo.jpg" alt="" class="portfolio__img">
-      </a>
+        <div class="image__overlay">
+          <a href="myflixapi.html" style="text-decoration: none; color: white">
+            <h3 class="image__title">MyFlix Api</h3>
+          </a>
+        </div>
+      </div>
 
       <!-- Portfolio item 06 -->
-      <a href="chatapp.html" class="portfolio__item">
+      <div class="portfolio__item">
         <img src="img/chat.jpg" alt="" class="portfolio__img">
-      </a>
-    </div>
+        <div class="image__overlay">
+          <a href="chatapp.html" style="text-decoration: none; color: white">
+            <h3 class="image__title">Chat App</h3>
+          </a>
+        </div>
+      </div>
 
-    <!-- Resume -->
-    <br>
-    <div class="resume" id="resume">
-      <h2 class="section__title section__title--resume">Resume</h2>
+
+      <!-- Resume -->
       <br>
-      <a href="img/CV.pdf" target="_blank" class="btn" download>Resume Download</a>
-    </div>
+      <div class="resume" id="resume">
+        <br>
+        <h2 class="section__title section__title--resume">Resume</h2>
+        <br>
+        <a href="img/CV.pdf" target="_blank" class="btn" download>Resume Download</a>
+      </div>
 
   </section>
 
