--- a/angular.html
+++ b/angular.html
@@ -53,8 +53,8 @@
       <p>
         <strong>Tech Specs: Angular, Node, Mongoose, Express</strong>
       </p>
-      <a href="https://github.com/carts123/myFlix-client-Angular" class="btn">Git repo</a>
-      <a href="https://carts123.github.io/myFlix-client-Angular/" class="btn">Live site</a>
+      <a href="https://github.com/carts123/myFlix-client-Angular" class="btn" target="_blank">Git repo</a>
+      <a href="https://carts123.github.io/myFlix-client-Angular/" class="btn" target="_blank">Live site</a>
     </div>
   </div>
 
@@ -63,17 +63,17 @@
   <footer class="footer">
     <ul class="social-list">
       <li class="social-list__item">
-        <a class="social-list__link" href="https://www.linkedin.com/in/jonathan-graham-carter/">
+        <a class="social-list__link" href="https://www.linkedin.com/in/jonathan-graham-carter/" target="_blank">
           <i class="fab fa-linkedin"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" href="https://twitter.com/JonnyCa12850405">
+        <a class="social-list__link" href="https://twitter.com/JonnyCa12850405" target="_blank">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" href="https://github.com/carts123">
+        <a class="social-list__link" href="https://github.com/carts123" target="_blank">
           <i class="fab fa-github"></i>
         </a>
       </li>
