--- a/chatapp.html
+++ b/chatapp.html
@@ -53,7 +53,7 @@
       <p>
         <strong>Tech Stack: React Native, Expo, Google Firestore Database</strong>
       </p>
-      <a href="https://github.com/carts123/ChatApp" class="btn">Git repo</a>
+      <a href="https://github.com/carts123/ChatApp" class="btn" target="_blank">Git repo</a>
     </div>
   </div>
 
@@ -62,17 +62,17 @@
   <footer class="footer">
     <ul class="social-list">
       <li class="social-list__item">
-        <a class="social-list__link" href="https://www.linkedin.com/in/jonathan-graham-carter/">
+        <a class="social-list__link" href="https://www.linkedin.com/in/jonathan-graham-carter/" target="_blank">
           <i class="fab fa-linkedin"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" href="https://twitter.com/JonnyCa12850405">
+        <a class="social-list__link" href="https://twitter.com/JonnyCa12850405" target="_blank">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link" href="https://github.com/carts123">
+        <a class="social-list__link" href="https://github.com/carts123" target="_blank">
           <i class="fab fa-github"></i>
         </a>
       </li>
