--- a/pokedex.html
+++ b/pokedex.html
@@ -54,8 +54,8 @@
       <p>
         <strong>Tech Specs: Javascript, JSON, Bootstrap</strong>
       </p>
-      <a href="https://github.com/carts123/pokedex-app" class="btn">Git repo</a>
-      <a href="https://carts123.github.io/pokedex-app/" class="btn">Live site</a>
+      <a href="https://github.com/carts123/pokedex-app" class="btn" target="_blank">Git repo</a>
+      <a href="https://carts123.github.io/pokedex-app/" class="btn" target="_blank">Live site</a>
     </div>
   </div>
 
