React gif added

--- a/myflixreact.html
+++ b/myflixreact.html
@@ -54,7 +54,7 @@
         <strong>Tech Specs: React, Node.js, Mongoose, Express</strong>
       </p>
       <a href="https://github.com/carts123/myFlix-client" class="btn" target="_blank">Git repo</a>
-      <a href="https://myflix-carts.netlify.app/" class="btn" target="_blank">Live site</a>
+      <a href="https://myflix-carts.netlify.app" class="btn" target="_blank">Live site</a>
     </div>
   </div>
 
