Chat App gif and api image added

--- a/chatapp.html
+++ b/chatapp.html
@@ -48,7 +48,7 @@
     <p>This is a native app for mobile devices that allows users to chat and share their images and locations. Users can
       also select their background color before beginning their chat. The application can be accessed offline and will
       load data from the last online session.</p>
-    <img src="img/pokedex.gif" alt="">
+    <center><img src="img/chatapp.gif" alt=""></center>
     <div class="section__title--apps">
       <p>
         <strong>Tech Stack: React Native, Expo, Google Firestore Database</strong>
