--- a/myflixapi.html
+++ b/myflixapi.html
@@ -46,8 +46,9 @@
 
   <div class="portfolio-item-individual">
     <p>This project is a REST API that interacts with a MongoDB database. It is used in other projects to provide movie
-      information and allow users to create accounts and save their favourite movies.</p>
-    <img src="img/pokedex.gif" alt="">
+      information and allow users to create accounts and save their favourite movies. Testing of the endpoints was
+      undertaken through Postman, as you can see below.</p>
+    <img src="img/MyFlixAPI.jpg" alt="">
     <div class="section__title--apps">
       <p>
         <strong> Stack: MongoDB, Express, Node.js</strong>
