Skills section updated

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
     <div class="services">
       <div class="service">
         <h3>Problem Solver</h3>
-        <p>Clarity is my passion, ambiguity is my comfort zone. I anticipate problems before issues arise by formulating
-          solutions to streamline the development process. </p>
+        <p>As a self-employed individual, my problem solving skills need to be of an excellent standard, as I am largely
+          reliant on myself to resolve any issues or problems I face.
+        </p>
       </div> <!-- / service -->
 
       <div class="service">
@@ -99,7 +100,7 @@
 
   <!-- My Work -->
   <section class="my-work" id="work">
-    <h2 class="section__title section__title--work">My work</h2>
+    <h2 class="section__title section__title--work">My Work</h2>
     <p class="section__subtitle section__subtitle--work">I have created a diverse collection of work for my portfolio -
       multiple web apps, a Progressive Web App(PWA), a Rest API, and a native mobile app.</p>
 
