Resume button moved and About section updated

--- a/index.html
+++ b/index.html
@@ -80,10 +80,15 @@
     <div class="about-me__body">
       <p>I’m a junior Full-Stack Developer with a background in gardening and marketing. After moving to
         London in January 2020 in search of an entry-level marketing role I found my career search halted by Covid-19.
-        With entry level roles drying up I made the decision in June to move back to my home village and return to a
+        With entry level roles drying up I made the decision in June 2020 to move back to my home village and return to
+        a
         self-employed gardener role, of which I have 5+ years experience. After a month or so of brainstorming
-        career options I settled on the idea of becoming a software developer and thus signed on to the CareerFoundry
+        career options I settled on the idea of becoming a software developer and thus completed the CareerFoundry
         Full-Stack Developer course.
+      </p>
+      <p>
+        As well as completing the CareerFoundry course, I have recently taken an interest in the network-side of
+        computing, and I am now working aggressively towards my CCNA certification.
       </p>
       <p>
         I am particularly interested in companies who value communication and team work - as well as somewhere I can
@@ -91,8 +96,12 @@
         and produce work that contributes positively to society.
       </p>
       <p>
-        Feel free to check out my portfolio of work below.
+        Feel free to check out my portfolio of work and resume below.
       </p>
+      <br>
+      <div class="resume" id="resume">
+        <a href="img/CV.pdf" target="_blank" class="btn" download>Resume Download</a>
+      </div>
     </div>
 
     <img src="img/JonnyC.jpg" alt="Jonny leaning against a wall" class="about-me__img">
@@ -163,16 +172,6 @@
             <h3 class="image__title">Chat App</h3>
           </a>
         </div>
-      </div>
-
-
-      <!-- Resume -->
-      <br>
-      <div class="resume" id="resume">
-        <br>
-        <h2 class="section__title section__title--resume">Resume</h2>
-        <br>
-        <a href="img/CV.pdf" target="_blank" class="btn" download>Resume Download</a>
       </div>
   </section>
 
