Spelling errors corrected

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         Full-Stack Developer course.
       </p>
       <p>
-        As well as completing the CareerFoundry course, I have recently taken an interest in the network-side of
+        As well as completing the CareerFoundry course, I have recently taken an interest in the network side of
         computing, and I am now working aggressively towards my CCNA certification.
       </p>
       <p>
@@ -104,7 +104,7 @@
       </div>
     </div>
 
-    <img src="img/JonnyC.jpg" alt="Jonny leaning against a wall" class="about-me__img">
+    <img src="img/JonnyC.jpg" alt="Jonny leaning" class="about-me__img">
   </section>
 
   <!-- My Work -->
