Correcting image file spelling mistake

--- a/myflixapi.html
+++ b/myflixapi.html
@@ -48,7 +48,7 @@
     <p>This project is a REST API that interacts with a MongoDB database. It is used in other projects to provide movie
       information and allow users to create accounts and save their favourite movies. Testing of the endpoints was
       undertaken through Postman, as you can see below.</p>
-    <img src="img/MyFlixAPI.jpg" alt="">
+    <img src="img/myflixAPI.jpg" alt="">
     <div class="section__title--apps">
       <p>
         <strong> Stack: MongoDB, Express, Node.js</strong>
